--- a/src/css/style_aboutMe.css
+++ b/src/css/style_aboutMe.css
@@ -67,3 +67,13 @@
 	transition: all 2s ease-in-out;
 	width: 60vw;
 }
+
+.projectsContent-aboutMe {
+	transition: all 2s ease-in-out;
+	display: flex;
+	position: absolute;
+	justify-content: space-evenly;
+	font-size: 0vh;
+	width: 0vw;
+	bottom: 0vh;
+}
