--- a/src/css/style_projects.css
+++ b/src/css/style_projects.css
@@ -62,3 +62,13 @@
 	transition: all 2s ease-in-out;
 	width: 100%;
 }
+
+.projectsContent-projects {
+	transition: all 2s ease-in-out;
+	display: flex;
+	position: absolute;
+	justify-content: space-evenly;
+	font-size: 4vh;
+	width: 100vw;
+	bottom: 0vh;
+}
